--- a/android/res/xml/config.xml
+++ b/android/res/xml/config.xml
@@ -26,7 +26,9 @@
     <access origin="http://127.0.0.1*"/> <!-- allow local pages -->
 
     <!-- <access origin="https://example.com" /> allow any secure requests to example.com -->
-    <access origin="https://orangeburgchurch.com" subdomains="true" /> such as above, but including subdomains, such as www -->
+    <access origin="https://orangeburgchurch.com" subdomains="true" /> 
+    <access origin="*.bibles.org"/>
+    <access origin="*.cloudfront.net"/>
     <access origin=".*"/>
 
     <!-- <content src="http://mysite.com/myapp.html" /> for external pages -->
